# Mandelbrot-Displayer-using-Perturbation

./: CMakeLists.txt  README.md  complexBigNum.cpp  gen  glad.c  main.cpp  shaderProgram.cpp  test.cpp
include/: shaderProgram.h
include/cmpl/: complexBigNum.hpp
include/glad/: glad.h
shaders/: frag.glsl  vert.glsl
